--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -214,9 +214,7 @@
         "firefox",
         "uget",
         "vlc",
-        "mpv",
-        "imv",
-        "uget"
+        "mpv"
       ]
 
 - name: Git Config 
