--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -181,6 +181,7 @@
         "pavucontrol",
         "nemo",
         "grim",
+        "grimshot",
         "slurp",
         "polkit",
         "polkit-gnome",
