--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -180,6 +180,12 @@
         "xorg-xwayland",
         "pavucontrol",
         "nemo",
+        "nemo-preview",
+        "nemo-fileroller",
+        "nemo-image-converter",
+        "gvfs",
+        "gvfs-mtp",
+        "gvfs-smb",
         "grim",
         "slurp",
         "polkit",
